test/configCases/errors/hook-webpack-error/errors.js
"use strict";

module.exports = [[/Module build failed/]];
